# qrencode-ocaml

./: .gitignore  META  Makefile  _oasis  _tags  index.html  myocamlbuild.ml  qRencode.ml  qrencode.opam  setup.ml  test.ml
lib/: META  libqrencode_stubs.clib  qrencode.mllib
qrencode/: index.html
qrencode/Qrencode/: index.html
qrencode/Qrencode/Basic/: index.html
qrencode/Qrencode/QRcode/: index.html
qrencode/Qrencode/QRencodeMode/: index.html
qrencode/Qrencode/QRinput/: index.html
src/: dune  qrencode.ml  qrencode_stubs.c
test/: test.ml
