(library
 (name            qrencode)
 (public_name     qrencode)
 (libraries       base)
 (c_names         qrencode_stubs)
 (c_flags         (:include c_flags.sexp))
 (c_library_flags (:include c_library_flags.sexp)))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (deps (:< config/discover.exe))
 (action (run %{<})))

